static-embassy/analysis-api/bigsi/bigsi-aggregator-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mykrobe-atlas-bigsi-aggregator-api
    tier: front
  name: mykrobe-atlas-bigsi-aggregator-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: mykrobe-atlas-bigsi-aggregator-api
  template:
    metadata:
      labels:
        app: mykrobe-atlas-bigsi-aggregator-api
    spec:
      containers:
      - args:
        - -c
        - uwsgi --http :80  --harakiri 300  --buffer-size=65535  -w wsgi
        command:
        - /bin/sh
        image: phelimb/bigsi-aggregator:210419
        imagePullPolicy: IfNotPresent
        name: mykrobe-atlas-bigsi-aggregator
        ports:
        - containerPort: 80
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
