static-embassy/analysis-api/bigsi/bigsi-aggregator-worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mykrobe-atlas-bigsi-aggregator-worker
    tier: front
  name: mykrobe-atlas-bigsi-aggregator-worker
  namespace: default
spec:
  selector:
    matchLabels:
      app: mykrobe-atlas-bigsi-aggregator-worker
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mykrobe-atlas-bigsi-aggregator-worker
    spec:
      containers:
      - args:
        - -A
        - bigsi_aggregator.celery
        - worker
        - --concurrency=1
        command:
        - celery
        image: phelimb/bigsi-aggregator:210419
        imagePullPolicy: IfNotPresent
        name: mykrobe-atlas-bigsi-aggregator-worker
      dnsPolicy: ClusterFirst
      restartPolicy: Always
