static-embassy/analysis-api/bigsi/bigsi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mykrobe-atlas-bigsi
    tier: front
  name: mykrobe-atlas-bigsi-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: mykrobe-atlas-bigsi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mykrobe-atlas-bigsi
    spec:
      containers:
      - args:
        - -c
        - uwsgi --enable-threads --http :80 --wsgi-file bigsi/__main__.py --callable
          __hug_wsgi__ --processes=4 --buffer-size=32768 --harakiri=300000
        command:
        - /bin/sh
        image: phelimb/bigsi:v0.3.5
        imagePullPolicy: IfNotPresent
        name: mykrobe-atlas-bigsi
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /data/
          name: pv-storage-for-mykrobe-atlas-bigsi
        - mountPath: /etc/bigsi/conf/
          name: configmap-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: pv-storage-for-mykrobe-atlas-bigsi
        persistentVolumeClaim:
          claimName: pv-claim-for-mykrobe-atlas-bigsi
      - configMap:
          defaultMode: 420
          name: mykrobe-atlas-bigsi-config
        name: configmap-volume
