static-embassy/analysis-api/bigsi/bigsi-aggregator-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mykrobe-atlas-bigsi-aggregator-api
  name: mykrobe-atlas-bigsi-aggregator-api-service
  namespace: default
spec:
  clusterIP: 10.43.197.209
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31290
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mykrobe-atlas-bigsi-aggregator-api
  sessionAffinity: None
  type: NodePort
